--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,16 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    dataBinding{
+        enabled=true
+    }
+
 }
 
 dependencies {
 
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.virgilsecurity:ethree:2.0.10'
