--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,15 @@ android {
 
     defaultConfig {
         applicationId "com.daniel.utmpsm"
-        minSdk 26
+        minSdk 31
         targetSdk 32
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
     }
 
     buildTypes {
@@ -36,11 +39,12 @@ android {
         enabled=true
     }
 
+
+
 }
 
 dependencies {
 
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.virgilsecurity:ethree:2.0.10'
@@ -62,9 +66,16 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.6'
     implementation 'com.google.firebase:firebase-functions:20.1.0'
     implementation 'com.google.firebase:firebase-messaging:23.0.5'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation project(path: ":unityLibrary")
+    implementation project(path: ":launcher")
+    implementation fileTree(dir: 'libs',includes: ['*,jar'])
+    implementation fileTree(dir: "C://Users//Administrator//AndroidStudioProjects//UTMPSM//unityLibrary//libs",includes:['unity-classes.jar'] )
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
