--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.useAndroidX=true
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
+unityStreamingAssets=.unity3d, google-services-desktop.json, google-services.json, GoogleService-Info.plist
